--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@mui/material": "^7.3.4",
     "axios": "^1.12.2",
     "dayjs": "^1.11.18",
+    "dotenv": "^17.2.3",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
