--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
-    "sweetalert2": "^11.26.3"
+    "sweetalert2": "^11.26.3",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^5.0.4",
     "baseline-browser-mapping": "^2.9.11",
     "eslint": "^9.36.0",
